add app ads txt and index

--- a/index.html
+++ b/index.html
@@ -1,122 +1,48 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | TOWER DENFENSE</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">TOWER DENFENSE</div>
-      </div>
-    </div>
-    <script>
-
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
-
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
-
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/sperev.github.io-build.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/sperev.github.io-build.data",
-        frameworkUrl: buildUrl + "/sperev.github.io-build.framework.js",
-        codeUrl: buildUrl + "/sperev.github.io-build.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "AI GAME",
-        productName: "TOWER DENFENSE",
-        productVersion: "1.05",
-        showBanner: unityShowBanner,
-      };
-
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "1920px";
-        canvas.style.height = "1080px";
-      }
-
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                loadingBar.style.display = "none";
-                fullscreenButton.onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
-      document.body.appendChild(script);
-
-    </script>
-  </body>
+<html>
+<body>
+  <h1 style="text-align:center;">Idle Fashion Universe Tycoon</h1>
+<figure class="image" data-ckbox-resource-id="_InBbcvViG09">
+    <picture>
+        <source srcset="https://ckbox.cloud/ce04632a4da36d83df78/assets/_InBbcvViG09/images/80.webp 80w,https://ckbox.cloud/ce04632a4da36d83df78/assets/_InBbcvViG09/images/160.webp 160w,https://ckbox.cloud/ce04632a4da36d83df78/assets/_InBbcvViG09/images/240.webp 240w,https://ckbox.cloud/ce04632a4da36d83df78/assets/_InBbcvViG09/images/256.webp 256w" type="image/webp" sizes="(max-width: 256px) 100vw, 256px"><img src="https://ckbox.cloud/ce04632a4da36d83df78/assets/_InBbcvViG09/images/256.png" alt="" width="256" height="256">
+    </picture>
+</figure>
+<figure class="table" style="width:23.35%;">
+    <table class="ck-table-resized">
+        <colgroup>
+            <col style="width:47.16%;">
+            <col style="width:52.84%;">
+        </colgroup>
+        <tbody>
+            <tr>
+                <td>
+                    <figure class="image" data-ckbox-resource-id="5czjJvpIaC5Q"><a href="https://apps.apple.com/app/idle-fashion-universe-tycoon/id1053437958" target="_blank" rel="noopener noreferrer">
+                            <picture>
+                                <source srcset="https://ckbox.cloud/ce04632a4da36d83df78/assets/5czjJvpIaC5Q/images/80.webp 80w,https://ckbox.cloud/ce04632a4da36d83df78/assets/5czjJvpIaC5Q/images/120.webp 120w" type="image/webp" sizes="(max-width: 120px) 100vw, 120px"><img src="https://ckbox.cloud/ce04632a4da36d83df78/assets/5czjJvpIaC5Q/images/120.png" width="120" height="40">
+                            </picture>
+                        </a></figure>
+                </td>
+                <td>
+                    <figure class="image" data-ckbox-resource-id="xHVu19GNVBpm"><a href="https://play.google.com/store/apps/details?id=ru.sperev.gem15" target="_blank" rel="noopener noreferrer">
+                            <picture>
+                                <source srcset="https://ckbox.cloud/ce04632a4da36d83df78/assets/xHVu19GNVBpm/images/80.webp 80w,https://ckbox.cloud/ce04632a4da36d83df78/assets/xHVu19GNVBpm/images/136.webp 136w" type="image/webp" sizes="(max-width: 136px) 100vw, 136px"><img src="https://ckbox.cloud/ce04632a4da36d83df78/assets/xHVu19GNVBpm/images/136.png" width="136" height="41">
+                            </picture>
+                        </a></figure>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</figure>
+<figure class="table" style="width:39.86%;">
+    <table class="ck-table-resized">
+        <colgroup>
+            <col style="width:100%;">
+        </colgroup>
+        <tbody>
+            <tr>
+                <td>Play on mobile 🎮 "Idle Fashion Universe Tycoon" it is an exciting game in the genre of an economic store simulator 🏣. Our game allows you to start your own clothing store, manage inventory, and attract new customers with your unique style and service. Become the director of a special fashion store, purchase furniture and equipment, hire staff, meet the needs of your customers, and let the fame of your store spread throughout the city 🏙.</td>
+            </tr>
+        </tbody>
+    </table>
+</figure>
+</body>
 </html>
